# musicbot

./: .flake8  .gitignore  bot.py  pyproject.toml  readme.md
